projects/p6-security/redis-cart-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
  namespace: boutique
  labels:
    app: redis-cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cart
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      serviceAccountName: redis-cart
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: 125m
            memory: 256Mi
          requests:
            cpu: 70m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
        # 1. Mount the CSI volume containing secrets
        - mountPath: "/mnt/secrets"
          name: secrets-store-inline
          readOnly: true
      volumes:
      - emptyDir: {}
        name: redis-data
      # 2. Declare the CSI volume pointing to the SecretProviderClass
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "boutique-kv-secrets"
