projects/p6-security/cartservice-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cartservice-policy
  namespace: boutique

spec:
  podSelector:
    matchLabels:
      app: cartservice
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend
      - podSelector:
          matchLabels:
            app: checkoutservice
      ports:
        - protocol: TCP
          port: 7070  

  egress:
    - to:
      - podSelector:
          matchLabels:
            app: redis-cart
      ports:
        - protocol: TCP
          port: 6379
