projects/p6-security/checkoutservice-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice-policy
  namespace: boutique
spec:
  podSelector:
    matchLabels:
      app: checkoutservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 5050
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: cartservice
      ports:
        - protocol: TCP
          port: 7070
    - to:
        - podSelector:
            matchLabels:
              app: shippingservice
      ports:
        - protocol: TCP
          port: 50051
    - to:
        - podSelector:
            matchLabels:
              app: paymentservice
      ports:
        - protocol: TCP
          port: 50051
    - to:
        - podSelector:
            matchLabels:
              app: emailservice
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: currencyservice
      ports:
        - protocol: TCP
          port: 7000
    - to:
        - podSelector:
            matchLabels:
              app: productcatalogservice
      ports:
        - protocol: TCP
          port: 3550
