projects/p6-security/frontend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: boutique
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        # Allow internet traffic (no selectors matches all IPs outside the cluster)
        - ipBlock:
            cidr: 0.0.0.0/0
        # Allow load generator pod
        - podSelector:
            matchLabels:
              app: loadgenerator
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: cartservice
      ports:
        - protocol: TCP
          port: 7070
    - to:
        - podSelector:
            matchLabels:
              app: productcatalogservice
      ports:
        - protocol: TCP
          port: 3550
    - to:
        - podSelector:
            matchLabels:
              app: currencyservice
      ports:
        - protocol: TCP
          port: 7000
    - to:
        - podSelector:
            matchLabels:
              app: recommendationservice
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: shippingservice
      ports:
        - protocol: TCP
          port: 50051
    - to:
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - protocol: TCP
          port: 5050
    - to:
        - podSelector:
            matchLabels:
              app: adservice
      ports:
        - protocol: TCP
          port: 9555
