projects/p6-security/recommendationservice-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: recommendationservice-policy
  namespace: boutique

spec:
  podSelector:
    matchLabels:
      app: recommendationservice
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend
      ports:
        - protocol: TCP
          port: 8080  

  egress:
    - to:
      - podSelector:
          matchLabels:
            app: productcatalogservice
      ports:
        - protocol: TCP
          port: 3550
